[package]
name = "wasmtime-wasi-nn"
version.workspace = true
authors.workspace = true
description = "Wasmtime implementation of the wasi-nn API"
documentation = "https://docs.rs/wasmtime-wasi-nn"
license = "Apache-2.0 WITH LLVM-exception"
categories = ["wasm", "computer-vision"]
keywords = ["webassembly", "wasm", "neural-network"]
repository = "https://github.com/bytecodealliance/wasmtime"
readme = "README.md"
edition.workspace = true

[dependencies]
# These dependencies are necessary for the witx-generation macros to work:
anyhow = { workspace = true }
wiggle = { workspace = true }
wasi-common = { workspace = true }

# These dependencies are necessary for the wasi-nn implementation:
openvino = { version = "0.4.2", features = ["runtime-linking"] }
thiserror = { workspace = true }
dashmap = "5.4.0"
rust-bert = "0.20.0"
uuid = {version = "1.3.0", features = ["serde"] }
serde = "1.0.160"
serde_json = "1.0.96"

[build-dependencies]
walkdir = "2.3"

[badges]
maintenance = { status = "experimental" }
